@@ -1,7 +1,7 @@
 # -*- cperl -*-
 
 use ExtUtils::testlib;
-use Test::More tests => 67 ;
+use Test::More tests => 76 ;
 use Config::Model ;
 use Log::Log4perl qw(:easy) ;
 use File::Path ;
@@ -227,6 +227,103 @@ $tests[$i++]{check} = [
                      ."   [snip again]",
                    ];
 
+$tests[$i]{text} = <<'EOD6' ;
+Format-Specification: http://svn.debian.org/wsvn/dep/web/deps/dep5.mdwn?op=file&rev=135
+Name: aqemu
+Maintainer: Ignace Mouzannar <mouzannar at gmail.com>
+Source: http://aqemu.sourceforge.net/
+
+Files: *
+Copyright:
+    2008-2010 Andrey Rijov <ANDron142  at  yandex.ru>
+license: GPL-2
+
+Files: 
+    Embedded_Display/Machine_View.cpp
+    Embedded_Display/Machine_View.h
+Copyright:
+    2008 Ben Klopfenstein <benklop at gmail.com>
+    2009-2010 Andrey Rijov <ANDron142 at yandex.ru>
+license: GPL-2
+
+Files: cmake/modules/CheckPointerMember.cmake
+Copyright:
+    2006, Alexander Neundorf <neundorf at kde.org>
+license: BSD
+
+Files: cmake/modules/FindLibVNCServer.cmake
+Copyright:
+    2006, Alessandro Praduroux <pradu at pradu.it>
+    2007, Urs Wolfer <uwolfer at kde.org>
+license: BSD
+
+Files: Embedded_Display/remoteview.cpp Embedded_Display/remoteview.h
+Copyright:
+    2002-2003 Tim Jansen <tim at tjansen.de>
+    2007-2008 Urs Wolfer <uwolfer at kde.org>
+license: GPL-2
+
+Files: 
+    Embedded_Display/vncclientthread.cpp
+    Embedded_Display/vncclientthread.h
+    Embedded_Display/vncview.cpp
+    Embedded_Display/vncview.h
+Copyright:
+    2007-2008 Urs Wolfer <uwolfer at kde.org>
+license: GPL-2
+
+Files: debian/*
+Copyright:
+    2009-2010, Ignace Mouzannar <mouzannar at gmail.com>
+license: GPL-2
+
+License: GPL-2
+
+   This package is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+
+   This package is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this package; if not, see .
+
+   On Debian systems, the complete text of the GNU General
+   Public License can be found in `/usr/share/common-licenses/GPL-2'.
+
+license: BSD
+
+   Redistribution and use in source and binary forms, with or without
+   modification, are permitted provided that the following conditions
+   are met:
+   
+   1. Redistributions of source code must retain the copyright
+      notice, this list of conditions and the following disclaimer.
+   2. Redistributions in binary form must reproduce the copyright
+      notice, this list of conditions and the following disclaimer in the
+      documentation and/or other materials provided with the distribution.
+   3. The name of the author may not be used to endorse or promote products 
+      derived from this software without specific prior written permission.
+   
+   THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+   IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+   OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+   IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+   INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+   NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+   DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+   THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+   (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+   THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+EOD6
+
+$tests[$i++]{check} = [ 
+                      'Files:"Embedded_Display/remoteview.cpp Embedded_Display/remoteview.h" License abbrev',"GPL-2",
+                   ];
 
 my $idx = 0 ;
 foreach my $t (@tests) {
